# advertising_screens

./: .gitignore  .gitmodules  Dockerfile  manage.py  pyproject.toml  requirements.txt
advertising/: admin.py  base_settings.py  celery.py  settings.py  urls.py  wsgi.py
mock_deploy/: api-endpoint.conf  settings.py
room_schedules/: __init__.py  admin.py  apps.py  artifax_requests.py  data_chains.py  settings.py  tasks.py  urls.py  views.py
room_schedules/cron/: build_schedule.py  cleanup_schedule.py
room_schedules/migrations/: 0001_initial.py  0002_auto_20190713_1641.py  0003_auto_20190713_1917.py  0004_event_cancelled.py  0005_auto_20190907_0919.py
room_schedules/models/: __init__.py  event.py  room.py  venue.py
screens/: admin.py  forms.py  settings.py  tasks.py  tests.py  views.py
screens/cron/: __init__.py  build_schedule.py  cleanup_schedule.py  cleanup_sources.py  update_playlists.py
screens/migrations/: 0001_initial.py  0002_auto_20190711_1030.py  0002_remove_schedulebuilderdirective_ends.py  0003_auto_20190708_1307.py  0003_playlist_interspersed_source.py  0004_auto_20190708_1335.py  0004_source_exclude_from_play_all.py  0005_auto_20190708_1417.py  0005_playlist_last_updated.py  0006_auto_20190708_1424.py  0006_auto_20190711_2015.py  0007_auto_20190708_1520.py  0007_source_expires_at.py  0008_auto_20190828_1541.py  0008_schedule_default.py  0009_auto_20190708_1608.py  0009_source_valid_from.py  0010_playlistentry_duration.py  0011_auto_20210215_2224.py  0012_auto_20210219_1454.py  0013_auto_20210219_1732.py  0014_auto_20210522_1745.py  0015_source_created_at.py  0016_auto_20210826_2231.py  0016_auto_20210828_1152.py  0016_playlist_parents.py  0017_auto_20210902_0833.py  0018_alter_source_file.py  (+3 more)
(+22 files in other folders)
