[project]
name = "advertising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.0.2",
    "django-admin-ordering==0.14.2",
    "django-cleanup==6.0.0",
    "celery[redis]==5.3.6",
    "django-celery-beat==2.5.0",
    "django_celery_results==2.6.0",
    "django-recurrence==1.11.1",
    "httplib2==0.20.4",
    "pillow==11.0.0",
]

[project.optional-dependencies]
dev = [
    "time-machine==2.6.0",
]
runtime = [
    "mysqlclient==2.2.0",
    "uwsgi"
]