[project]
name = "advertising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.29",
    "django-admin-ordering==0.20.0",
    "django-cleanup==9.0.0",
    "django-unfold==0.82.0",
    "celery[redis]==5.3.6",
    "django-celery-beat==2.5.0",
    "django-celery-results==2.6.0",
    "django-recurrence==1.14",
    "httplib2==0.31.2",
    "msal>=1.28.0",
    "pillow==12.1.1",
]

[project.optional-dependencies]
dev = [
    "time-machine==3.2.0",
]
runtime = [
    "mysqlclient==2.2.0",
    "uwsgi"
]
